tests/snapshots/lexer_snapshots__lexer_all@tokens-68.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/parser/parse_implements_clause.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Point",
            ),
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: Colon,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "Movable",
            ),
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Plus,
            position: 24,
            line: 1,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "Drawable",
            ),
            position: 33,
            line: 1,
            column: 34,
        },
        Token {
            token_type: LeftBrace,
            position: 35,
            line: 1,
            column: 36,
        },
        Token {
            token_type: RightBrace,
            position: 36,
            line: 1,
            column: 37,
        },
    ],
)
