tests/snapshots/lexer_snapshots__lexer_all@tokens-7.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/language/07_structs.of
---
Ok(
    [
        Token {
            token_type: Import,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: LeftBrace,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: From,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: StringLit(
                "of:core",
            ),
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Semicolon,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Struct,
            position: 40,
            line: 3,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Person",
            ),
            position: 47,
            line: 3,
            column: 14,
        },
        Token {
            token_type: LeftBrace,
            position: 49,
            line: 3,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 56,
            line: 4,
            column: 7,
        },
        Token {
            token_type: Colon,
            position: 57,
            line: 4,
            column: 8,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 61,
            line: 4,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "age",
            ),
            position: 67,
            line: 5,
            column: 6,
        },
        Token {
            token_type: Colon,
            position: 68,
            line: 5,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "i32",
            ),
            position: 72,
            line: 5,
            column: 11,
        },
        Token {
            token_type: Function,
            position: 84,
            line: 7,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "greet",
            ),
            position: 90,
            line: 7,
            column: 17,
        },
        Token {
            token_type: LeftParen,
            position: 91,
            line: 7,
            column: 18,
        },
        Token {
            token_type: SelfRef,
            position: 95,
            line: 7,
            column: 22,
        },
        Token {
            token_type: RightParen,
            position: 96,
            line: 7,
            column: 23,
        },
        Token {
            token_type: Colon,
            position: 97,
            line: 7,
            column: 24,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 101,
            line: 7,
            column: 28,
        },
        Token {
            token_type: LeftBrace,
            position: 103,
            line: 7,
            column: 30,
        },
        Token {
            token_type: StringLit(
                "Hi, I'm ",
            ),
            position: 118,
            line: 8,
            column: 15,
        },
        Token {
            token_type: Plus,
            position: 120,
            line: 8,
            column: 17,
        },
        Token {
            token_type: SelfRef,
            position: 125,
            line: 8,
            column: 22,
        },
        Token {
            token_type: Dot,
            position: 126,
            line: 8,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 130,
            line: 8,
            column: 27,
        },
        Token {
            token_type: Plus,
            position: 132,
            line: 8,
            column: 29,
        },
        Token {
            token_type: StringLit(
                " (",
            ),
            position: 137,
            line: 8,
            column: 34,
        },
        Token {
            token_type: Plus,
            position: 139,
            line: 8,
            column: 36,
        },
        Token {
            token_type: LeftParen,
            position: 141,
            line: 8,
            column: 38,
        },
        Token {
            token_type: SelfRef,
            position: 145,
            line: 8,
            column: 42,
        },
        Token {
            token_type: Dot,
            position: 146,
            line: 8,
            column: 43,
        },
        Token {
            token_type: Identifier(
                "age",
            ),
            position: 149,
            line: 8,
            column: 46,
        },
        Token {
            token_type: As,
            position: 152,
            line: 8,
            column: 49,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 156,
            line: 8,
            column: 53,
        },
        Token {
            token_type: RightParen,
            position: 157,
            line: 8,
            column: 54,
        },
        Token {
            token_type: Plus,
            position: 159,
            line: 8,
            column: 56,
        },
        Token {
            token_type: StringLit(
                ")",
            ),
            position: 163,
            line: 8,
            column: 60,
        },
        Token {
            token_type: RightBrace,
            position: 167,
            line: 9,
            column: 4,
        },
        Token {
            token_type: Function,
            position: 179,
            line: 11,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "birthday",
            ),
            position: 188,
            line: 11,
            column: 20,
        },
        Token {
            token_type: LeftParen,
            position: 189,
            line: 11,
            column: 21,
        },
        Token {
            token_type: SelfRef,
            position: 193,
            line: 11,
            column: 25,
        },
        Token {
            token_type: RightParen,
            position: 194,
            line: 11,
            column: 26,
        },
        Token {
            token_type: Colon,
            position: 195,
            line: 11,
            column: 27,
        },
        Token {
            token_type: Identifier(
                "Person",
            ),
            position: 202,
            line: 11,
            column: 34,
        },
        Token {
            token_type: LeftBrace,
            position: 204,
            line: 11,
            column: 36,
        },
        Token {
            token_type: Identifier(
                "Person",
            ),
            position: 215,
            line: 12,
            column: 11,
        },
        Token {
            token_type: LeftBrace,
            position: 217,
            line: 12,
            column: 13,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 222,
            line: 12,
            column: 18,
        },
        Token {
            token_type: Colon,
            position: 223,
            line: 12,
            column: 19,
        },
        Token {
            token_type: SelfRef,
            position: 228,
            line: 12,
            column: 24,
        },
        Token {
            token_type: Dot,
            position: 229,
            line: 12,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 233,
            line: 12,
            column: 29,
        },
        Token {
            token_type: Comma,
            position: 234,
            line: 12,
            column: 30,
        },
        Token {
            token_type: Identifier(
                "age",
            ),
            position: 238,
            line: 12,
            column: 34,
        },
        Token {
            token_type: Colon,
            position: 239,
            line: 12,
            column: 35,
        },
        Token {
            token_type: SelfRef,
            position: 244,
            line: 12,
            column: 40,
        },
        Token {
            token_type: Dot,
            position: 245,
            line: 12,
            column: 41,
        },
        Token {
            token_type: Identifier(
                "age",
            ),
            position: 248,
            line: 12,
            column: 44,
        },
        Token {
            token_type: Plus,
            position: 250,
            line: 12,
            column: 46,
        },
        Token {
            token_type: Int(
                "1",
            ),
            position: 252,
            line: 12,
            column: 48,
        },
        Token {
            token_type: RightBrace,
            position: 254,
            line: 12,
            column: 50,
        },
        Token {
            token_type: RightBrace,
            position: 258,
            line: 13,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 260,
            line: 14,
            column: 2,
        },
        Token {
            token_type: Function,
            position: 270,
            line: 16,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "main",
            ),
            position: 275,
            line: 16,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 276,
            line: 16,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 277,
            line: 16,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 278,
            line: 16,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 282,
            line: 16,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 284,
            line: 16,
            column: 23,
        },
        Token {
            token_type: Var,
            position: 290,
            line: 17,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "alice",
            ),
            position: 296,
            line: 17,
            column: 12,
        },
        Token {
            token_type: Eq,
            position: 298,
            line: 17,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "Person",
            ),
            position: 305,
            line: 17,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 307,
            line: 17,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "name",
            ),
            position: 312,
            line: 17,
            column: 28,
        },
        Token {
            token_type: Colon,
            position: 313,
            line: 17,
            column: 29,
        },
        Token {
            token_type: StringLit(
                "Alice",
            ),
            position: 321,
            line: 17,
            column: 37,
        },
        Token {
            token_type: Comma,
            position: 322,
            line: 17,
            column: 38,
        },
        Token {
            token_type: Identifier(
                "age",
            ),
            position: 326,
            line: 17,
            column: 42,
        },
        Token {
            token_type: Colon,
            position: 327,
            line: 17,
            column: 43,
        },
        Token {
            token_type: Int(
                "30",
            ),
            position: 330,
            line: 17,
            column: 46,
        },
        Token {
            token_type: RightBrace,
            position: 332,
            line: 17,
            column: 48,
        },
        Token {
            token_type: Semicolon,
            position: 333,
            line: 17,
            column: 49,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 341,
            line: 18,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 342,
            line: 18,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "alice",
            ),
            position: 347,
            line: 18,
            column: 14,
        },
        Token {
            token_type: Dot,
            position: 348,
            line: 18,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "greet",
            ),
            position: 353,
            line: 18,
            column: 20,
        },
        Token {
            token_type: LeftParen,
            position: 354,
            line: 18,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 355,
            line: 18,
            column: 22,
        },
        Token {
            token_type: RightParen,
            position: 356,
            line: 18,
            column: 23,
        },
        Token {
            token_type: Semicolon,
            position: 357,
            line: 18,
            column: 24,
        },
        Token {
            token_type: Var,
            position: 364,
            line: 20,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "older",
            ),
            position: 370,
            line: 20,
            column: 12,
        },
        Token {
            token_type: Eq,
            position: 372,
            line: 20,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "alice",
            ),
            position: 378,
            line: 20,
            column: 20,
        },
        Token {
            token_type: Dot,
            position: 379,
            line: 20,
            column: 21,
        },
        Token {
            token_type: Identifier(
                "birthday",
            ),
            position: 387,
            line: 20,
            column: 29,
        },
        Token {
            token_type: LeftParen,
            position: 388,
            line: 20,
            column: 30,
        },
        Token {
            token_type: RightParen,
            position: 389,
            line: 20,
            column: 31,
        },
        Token {
            token_type: Semicolon,
            position: 390,
            line: 20,
            column: 32,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 398,
            line: 21,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 399,
            line: 21,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "older",
            ),
            position: 404,
            line: 21,
            column: 14,
        },
        Token {
            token_type: Dot,
            position: 405,
            line: 21,
            column: 15,
        },
        Token {
            token_type: Identifier(
                "greet",
            ),
            position: 410,
            line: 21,
            column: 20,
        },
        Token {
            token_type: LeftParen,
            position: 411,
            line: 21,
            column: 21,
        },
        Token {
            token_type: RightParen,
            position: 412,
            line: 21,
            column: 22,
        },
        Token {
            token_type: RightParen,
            position: 413,
            line: 21,
            column: 23,
        },
        Token {
            token_type: Semicolon,
            position: 414,
            line: 21,
            column: 24,
        },
        Token {
            token_type: Int(
                "0",
            ),
            position: 418,
            line: 22,
            column: 4,
        },
        Token {
            token_type: RightBrace,
            position: 420,
            line: 23,
            column: 2,
        },
    ],
)
