tests/snapshots/lexer_snapshots__lexer_all@tokens-71.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/parser/parse_extern_function_pointer_params.of
---
Ok(
    [
        Token {
            token_type: Extern,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Function,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "hashmap_set",
            ),
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: LeftParen,
            position: 28,
            line: 1,
            column: 29,
        },
        Token {
            token_type: Identifier(
                "key",
            ),
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Colon,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Star,
            position: 34,
            line: 1,
            column: 35,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 37,
            line: 1,
            column: 38,
        },
        Token {
            token_type: Comma,
            position: 38,
            line: 1,
            column: 39,
        },
        Token {
            token_type: Identifier(
                "value",
            ),
            position: 44,
            line: 1,
            column: 45,
        },
        Token {
            token_type: Colon,
            position: 45,
            line: 1,
            column: 46,
        },
        Token {
            token_type: Star,
            position: 47,
            line: 1,
            column: 48,
        },
        Token {
            token_type: Identifier(
                "MyStruct",
            ),
            position: 55,
            line: 1,
            column: 56,
        },
        Token {
            token_type: RightParen,
            position: 56,
            line: 1,
            column: 57,
        },
        Token {
            token_type: Semicolon,
            position: 57,
            line: 1,
            column: 58,
        },
    ],
)
