tests/snapshots/lexer_snapshots__lexer_all@tokens-72.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/parser/parse_extern_function_simple.of
---
Ok(
    [
        Token {
            token_type: Extern,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Function,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: LeftParen,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "value",
            ),
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: Colon,
            position: 28,
            line: 1,
            column: 29,
        },
        Token {
            token_type: Identifier(
                "str",
            ),
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: RightParen,
            position: 33,
            line: 1,
            column: 34,
        },
        Token {
            token_type: Semicolon,
            position: 34,
            line: 1,
            column: 35,
        },
    ],
)
